# mooned_with_autotools

./: .gitignore  Makefile.am  Readme.md  configure.ac  meson.build
data/: Makefile.am  meson.build  mooned.desktop.in
src/: Makefile.am  meson.build
