## SUBDIRSはautomakeがMakefile.inを作成する対象となるサブ・ディレクトリを指定する
SUBDIRS = src data

## DIST_SUBDIRSはメンテナが「make dist」でディストリビューション・パッケージを作成する時に含めるサブ・ディレクトリを指定する
## DIST_SUBDIRが省略された場合は、automakeがSUBDIRなどから推測して設定する
## 詳しくは、マニュアルの「7. Directories」を参照のこと
## ここでは定義の必要はない
## DIST_SUBDIRS = src

## EXTRA_DISTはautomakeがディストリビューションに自動的に判断して入れられるファイル*以外*に入れたいファイルを指定する
EXTRA_DIST = Readme.md

